--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "devDependencies": {
     "@types/node": "^17.0.2",
     "@types/react": "^17.0.2",
+    "autoprefixer": "^10.4.7",
     "eslint": "^8.14.0",
     "eslint-config-next": "^12.1.5",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.6.3"
   }
 }
