--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "dependencies": {
     "@thirdweb-dev/react": "^2",
     "@thirdweb-dev/sdk": "^2",
@@ -16,7 +21,7 @@
     "react-dom": "^18.1.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.2",
+    "@types/node": "^17.0.45",
     "@types/react": "^17.0.2",
     "autoprefixer": "^10.4.7",
     "eslint": "^8.14.0",
