--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ethers": "^5.6.4",
     "next": "^12.1.6",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-numeric-input": "^2.2.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.45",
